package Model;

public class Producto {

    private String nombre;
    private String tipo;

}
